tstore-interface/manual-templates/middleware.yaml
---
# Source: tstore-interface/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-tstore-interface
spec:
  stripPrefix:
    prefixes:
      - "/tstore-interface"
