tstore-interface/manual-templates/deployment.yaml
---
# Source: tstore-interface/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tstore-interface-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tstore-interface
  template:
    metadata:
      labels:
        app: tstore-interface
    spec:
      containers:
      - name: tstore-interface
        image: "transpara/tstore-interface:kube-test"
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: transpara-docker-secret
