tstore-interface/manual-templates/tstore-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tstore-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tstore-ui
  template:
    metadata:
      labels:
        app: tstore-ui
    spec:
      containers:
      - name: tstore-ui
        image: "transpara/tstore-ui:<<TSTORE_UI_TAG>>"
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
